[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Effects/pimen/Fire Effect 2/Explosion SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Effects/FireSpell/FireSpell.gd" type="Script" id=2]
[ext_resource path="res://Assets/Other/ShadowWhite_32x32.png" type="Texture" id=3]
[ext_resource path="res://Assets/SFX/Mixkit/mage-explosion.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
height = 44.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="Animation" id=19]
resource_name = "shadow_play"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.941176, 0.364706, 0.364706, 1 ), Color( 0.737255, 0.615686, 0.329412, 1 ), Color( 0.941176, 0.364706, 0.364706, 1 ), Color( 0.737255, 0.615686, 0.329412, 1 ), Color( 0.941176, 0.364706, 0.364706, 1 ), Color( 0.737255, 0.615686, 0.329412, 1 ), Color( 0.941176, 0.364706, 0.364706, 1 ), Color( 0.737255, 0.615686, 0.329412, 1 ), Color( 0.941176, 0.364706, 0.364706, 1 ), Color( 0.737255, 0.615686, 0.329412, 1 ), Color( 0.941176, 0.364706, 0.364706, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="FireSpell" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.941176, 0.364706, 0.364706, 1 )
position = Vector2( 0, -8 )
z_index = -1
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -32, 0 )
frames = SubResource( 18 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( -16, 0 )
frames = SubResource( 18 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
frames = SubResource( 18 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 16, 0 )
frames = SubResource( 18 )

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
position = Vector2( 32, 0 )
frames = SubResource( 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "shadow_play"
anims/shadow_play = SubResource( 19 )

[node name="BombSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="animation_finished" from="AnimatedSprite5" to="." method="_on_AnimatedSprite5_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
